Added image to page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li class="list-elem">My parents named me Corey, and thought it was unambiguiously a boy's game</li>
         <li class="list-elem">I've met more girls named Corey/Cory than boys</li>
     </ol>
+    <h2>A picture of me</h2>
+    <img src="My Picture.jpg" alt="">
 </body>
 
 </html>
